--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <body>
   <h1>Hi, my name is Elijah Taylor.</h1>
   <p> <strong>Bears</strong>, <sub><u>Beets</u>,</sub> <strong><em>BattleStar Galactica</em></strong> </p>
+  <p> This project was similar to Dev 04 but we just injected bootstrap on top of the file I already had. </p>
 
   <nav>
     <ul>
@@ -36,7 +37,7 @@
     <li> I am a Junior at UNA </li>
     <li> Rest in Peace Tony Stark </li>
   </ul>
-  <img src="img/elijah-pic-170x240.png" alt="pic of me and gf" />
+  <img src="img/elijah-pic-170x240.PNG" alt="pic of me and gf" />
   <h2> Shortcut table </h2>
 
   <table style="width:50%">
